reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_vec_nested_output.snap
---
source: reflect-demo/src/test.rs
expression: "TestStructWithVecNested::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithVecNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "std::vec::Vec",
                "parameters": [
                  {
                    "name": "reflect_demo::test_lib::TestStructNested"
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "struct",
      "name": "reflect_demo::test_lib::TestStructNested",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    }
  ]
}
