reflect-demo/src/snapshots/reflect_demo__test__reflect_struct_with_vec_two_output.snap
---
source: reflect-demo/src/main.rs
expression: "TestStructWithVecTwo::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "primitive",
      "name": "i8",
      "description": "8-bit signed integer"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::test::TestStructWithVecTwo",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "u8"
              }
            ]
          }
        },
        {
          "name": "_f2",
          "type": {
            "name": "std::vec::Vec",
            "parameters": [
              {
                "name": "i8"
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::vec::Vec",
      "description": "Expandable array type",
      "parameters": [
        {
          "name": "T"
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
